k8s/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-pag-ingress
  namespace: default
spec:
  rules:
  - host: test.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-service
            port:
              number: 8080
      - path: /students/
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 8000
